# aas-rs

./: .pre-commit-config.yaml  Cargo.toml  README.md
aas/: Cargo.toml
aas-bench/: Cargo.toml
aas-bench/benches/: benchmark.rs
aas-bench/benches/files/json/: mvp-dpp-1.0.0.json
aas-json/: Cargo.toml
aas-json/src/: lib.rs
aas-json/src/part1/v3_1/: concept_description.rs  environment.rs  key.rs  level_type.rs  reference.rs  value_list.rs
aas-json/src/part1/v3_1/attributes/: administrative_information.rs  data_specification.rs  extension.rs  identifiable.rs  kind.rs  qualifiable.rs  referable.rs  semantics.rs
aas-json/src/part1/v3_1/core/: asset_administration_shell.rs  submodel.rs
aas-json/src/part1/v3_1/primitives/: data_type_def_xs.rs  identifier.rs  label.rs  lang_string.rs  message_topic.rs
aas-json/src/part1/v3_1/submodel_elements/: basic_event.rs  blob.rs  capability.rs  data_element.rs  entity.rs  file.rs  mod.rs  multi_language_property.rs  operation.rs  property.rs  range.rs  reference_element.rs  relationship_element.rs  submodel_element_collection.rs  submodel_element_list.rs
aas-json/src/part2/v3_1/endpoints/: asset_administration_shell_api.rs  asset_administration_shell_repository_api.rs  concept_description_repository_api.rs
aas-json/src/part2/v3_1/services/: mod.rs
aas-json/src/part2/v3_1/types/: thumbnail.rs
aas-xml/: Cargo.toml
aas-xml/src/: lib.rs
aas-xml/src/part1/v3_1/: key.rs  reference.rs
aas-xml/src/part1/v3_1/attributes/: administrative_information.rs  data_specification.rs
aas-xml/src/part1/v3_1/core/: submodel.rs
aas-xml/src/part1/v3_1/primitives/: mod.rs
aas-xml/src/part1/v3_1/submodel_elements/: mod.rs  multi_language_property.rs  submodel_element_list.rs
aas-xml/src/part2/v3_1/endpoints/: aasx_file_server_api.rs  async_bulk_result_api.rs  serialization_api.rs  submodel_repository_api.rs
aas-xml/src/part2/v3_1/types/: mod.rs
aas/src/part1/v3_1/: concept_description.rs  environment.rs  key.rs  level_type.rs  reference.rs  value_list.rs
aas/src/part1/v3_1/attributes/: administrative_information.rs  data_specification.rs  extension.rs  identifiable.rs  kind.rs  qualifiable.rs  referable.rs  semantics.rs
aas/src/part1/v3_1/core/: asset_administration_shell.rs  submodel.rs
aas/src/part1/v3_1/primitives/: data_type_def_xs.rs  identifier.rs  label.rs  lang_string.rs  message_topic.rs  mod.rs
aas/src/part1/v3_1/submodel_elements/: basic_event.rs  blob.rs  capability.rs  data_element.rs  entity.rs  file.rs  mod.rs  multi_language_property.rs  operation.rs  property.rs  range.rs  reference_element.rs  relationship_element.rs  submodel_element_collection.rs  submodel_element_list.rs
aas/src/part2/v3_1/: error.rs  mod.rs
aas/tests/: mvp-dpp-1.0.0.json  test-mvp.xml
(+98 files in other folders)
