[package]
name = "aas-bench"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "benchmark"
harness = false

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
pprof = { version = "0.15.0", features = ["criterion", "flamegraph"] }
aas = { path = "../aas" }

serde_json = "1.0.149"
simd-json = { version = "0.17.0"}

