[package]
name = "aas"
version = "0.4.0"
edition = "2024"
authors = ["Fynn Kleine <code@onlyfynns.de>"]
license = "MIT"
description = "Data type bindings for the Asset Administration Shell Specs"

[features]
default = ["json"]
json = []
openapi = ["dep:utoipa"]
part2 = ["openapi", "dep:axum", "dep:utoipa-axum", "dep:chrono"]

xml = ["dep:quick-xml"]

[dependencies]
oxilangtag = { version = "0.1.5", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["arbitrary_precision"] }

# utilities
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"

# types
serde_with = { version = "3.15.1", features = ["base64"] }
iso8601 = { version = "0.6.3", features = ["serde"] }
iref = { version = "3.2.2", features = ["serde"] }
bigdecimal = { version = "0.4.9", features = ["serde", "serde-json"] }

# feature "openapi"
utoipa = { version = "5.4.0", optional = true, features = ["chrono", "decimal", "yaml", "axum_extras"] }

# feature "part2"
utoipa-axum = { version = "0.2.0", optional = true }
axum = { version = "0.8.7", optional = true, features = ["macros", "form", "multipart"] }
chrono = { version = "0.4.42", optional = true, features = ["serde"] }

# feature "xml"
# "serialize" for serde, "serde-types" for impl_deserialize_for_internally_tagged_enum macro
quick-xml = { version = "0.38.4", optional = true, features = ["serialize", "serde-types"] }
